# diploma

./: README.md  architecture.txt  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  init_db.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 166bab066878_user_changes.py  3a887bbf3de1_order_model_change.py  5e3617e3e356_initial_migration.py  6243e427c6a6_added_status_to_orders.py  8a9dda35783d_orders_create_modification.py  b0034694f38c_add_users_table.py  daa6923a49ad_pizza_model_changes.py
backend/app/: main.py
backend/app/api/: auth.py  dependencies.py  orders.py  pizzas.py
backend/app/application/orders/: dto.py  use_cases.py
backend/app/application/pizzas/: dto.py  use_cases.py
backend/app/application/users/: dto.py  use_cases.py
backend/app/core/: __init__.py  base_settings.py  configs.py  consts.py  email.py  security.py
backend/app/domain/abc_repositories/: order_repository.py  pizza_repository.py  user_repository.py
backend/app/domain/models/: order.py  orderItem.py  pizza.py  user.py
backend/app/infrastructure/: database.py  security.py
backend/app/infrastructure/orm/: models.py  order_repository.py  pizza_repository.py  user_repository.py
backend/app/schemas/: user_schemas.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: auth.ts  client.ts  orders.ts  pizzas.ts
frontend/src/components/: CartSidebar.tsx  (+6 more)
(+10 files in other folders)
